Revert Index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <body>
-<p><iframe style="min-width: 400px; width: 100%; min-height: 500px;" src="https://webchat.botframework.com/embed/Bot0-0?s=sDrH7xUdxlo.XlBYyNh2nt-8l_WIpTAyYuW5hE01f4NczIEmrx2S9Vw"></iframe></p>
+<p><iframe style="min-width: 400px; width: 100%; min-height: 500px;" src="https://webchat.botframework.com/embed/Bot0-0?s=GSh1v9FGd5I.55Yl0kSMY6Je3TPtaUv3bvUDAKJW4YRcvM5HxDzsGUc"></iframe></p>
 </html>
