--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <iframe id="chat" style="width: 400px; height: 400px;" src=''></iframe>
+  <p style="text-align: center;"><strong>TEMG 4940B - Team 3A Chatbot</strong></p>
+  <p>Current Progress: Added CLU Model + Integrated Token Request Authorisation</p>
+  <p><strong style="text-align: center;"><iframe id="chat" style="width: 100%; height: 400px;" src=""></iframe> </strong></p>
 </body>
 <script>
 
