--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<iframe src='https://webchat.botframework.com/embed/WebChatBot-Fantastic4?s=M7XtZQHjs68.tSoQ4hCWpEBebW9dD-FgEuUPyhsbo3cslK2PpFDbPQM'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
-
+<!-- <iframe src='https://webchat.botframework.com/embed/WebChatBot-Fantastic4?s=M7XtZQHjs68.tSoQ4hCWpEBebW9dD-FgEuUPyhsbo3cslK2PpFDbPQM'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+-->
 <h3>Test Your OAuth Here</h3>
 <iframe src='https://webchat.botframework.com/embed/test-oauth-temg?s=YMHwYxzePS4.HVV7on2qSU2F9ps8KTdoguCbytxOxT2LnStbSAgNeu4'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
