--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <header class="top-header">
 </header>
 
-<div class="container">
+<!--<div class="container">-->
   <!--dust particel-->
   <div>
     <div class="starsec"></div>
@@ -32,7 +32,7 @@
      
        <!------------Right Side of the Page --->
     <div class="panel right-panel">
-         <iframe src='https://webchat.botframework.com/embed/CSharp-Chatbot-Fantastic4?s=jPgN1338We0.9hCfJ9BCVux8sZ3xd3sfV9Q-G8eZB9CW9YyjwzVfjSA'  style='min-width: 450px; width: 100%; min-height: 750px;'></iframe>
+         <iframe src='https://webchat.botframework.com/embed/CSharp-Chatbot-Fantastic4?s=jPgN1338We0.9hCfJ9BCVux8sZ3xd3sfV9Q-G8eZB9CW9YyjwzVfjSA'  style='min-width: 700px; width: 100%; min-height: 650px;'></iframe>
 
     </div>
   </div>
@@ -168,7 +168,7 @@
 
 .right-panel {
   pointer-events: none;
-  padding: 1rem 10% 1rem 5%;
+  padding: 1rem 5% 1rem 5%;
 }
 
   .image {
