--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
   </div>
 </div>
-
+<footer class="top-header"></footer>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap')
   
@@ -57,7 +57,7 @@
     content: '';
     display: block;
     width: 100%;
-    height: 4px;
+    height: 1000px;
     background-repeat: repeat-x;
     background-size: contain;
     position: absolute;
@@ -162,13 +162,13 @@
 }
 
 .left-panel {
-  pointer-events: all;
+  pointer-events: none;
   padding: 2rem 30% 3rem 8%;
 }
 
 .right-panel {
-  pointer-events: none;
-  padding: 1rem 5% 1rem 5%;
+  pointer-events: all;
+  padding: 1rem 5% 0.5rem 5%;
 }
 
   .image {
