--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <!-----HTML Code--->
-<head><nav class="navbar-mainbg">
+<div class="navbar-mainbg">  
             <button  onclick="openPage('Showcase',this)" id="defaultOpen" >Showcase</button>
             <button  onclick="openPage('Development',this)">Development</button>
-  </nav> </head>
+            
+</div> 
 <!--<div class="container">-->
   <!--dust particel-->
   <div>
@@ -268,5 +270,6 @@ function openPage(pageName,elmnt) {
 
 
 </script>
+
 
 
