--- a/index.html
+++ b/index.html
@@ -83,12 +83,6 @@ background: linear-gradient(90deg, rgba(232,3,3,1) 0%, rgba(231,154,63,1) 11%, r
 }
 
 
-
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap')
-  
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300&family=Source+Code+Pro:ital,wght@0,300;1,300&display=swap');
   
 @font-face {
@@ -242,7 +236,7 @@ q{
     width: 500px;
     resize: horizontal;
     border-radius: 25px;
-    position:absolute
+    position:absolute;
     right: 20px;
   }
 
