--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@ q{
     width: 500px;
     resize: horizontal;
     border-radius: 25px;
-    position:absolute;
-    right: 20px;
+    position:relative;
+  
   }
 
 </style>
@@ -264,6 +264,8 @@ function openPage(pageName,elmnt) {
 
 
 </script>
+
+
 
 
 
